--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "react-helmet": "^5.2.1",
     "react-scripts": "3.0.1"
   },
+  "homepage": "https://aurlind.github.io/pics",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
